fix gitbook code chunk word wrap

--- a/example-thesis/style.css
+++ b/example-thesis/style.css
@@ -7,13 +7,24 @@ p.caption {
 p code {
   white-space: inherit;
 }
-pre {
+
+/*pre {
   word-break: normal;
   word-wrap: normal;
 }
 pre code {
   white-space: inherit;
 }
+*/
+
+pre code, pre, code {
+  white-space: pre ;
+  overflow-x: auto !important;
+  word-break: keep-all ;
+  word-wrap: initial ;
+}
+
+
 p.flushright {
   text-align: right;
 }
